--- a/task1.html
+++ b/task1.html
@@ -15,7 +15,7 @@
     <main>
         <section>
             <div class="esas-hisse">
-            <img class="img1" src="https://raw.githubusercontent.com/KenanM0/Figma-task/1dc8b4506b800755fb04c6c9180adc9227d237db/Frame.svg" alt="">
+            <img class="img1" src="Frame.svg" alt="">
             <div class="div1">
             <p>Порой фильмы устроены сложнее четырёхтомных романов. Но читать книги учат со школы, а смотреть кино — нет. При этом без подготовки бывает трудно получить от просмотра удовольствие.</p>
             <p>На курсе из 8 занятий научимся быть осознанными зрителями. Познакомимся с этапами кинопроизводства и узнаем, как смотреть кино глазами сценариста, режиссёра и монтажёра. Разберёмся в особенностях жанров и рассмотрим важнейшие картины, от «Гражданина Кейна» до «Матрицы».
@@ -24,7 +24,7 @@
              </div>
              <div class="div2">
              
-                <img class="img2" src="https://raw.githubusercontent.com/KenanM0/Figma-task/1dc8b4506b800755fb04c6c9180adc9227d237db/Frame%20(1).svg" alt="">
+                <img class="img2" src="Frame (1).svg" alt="">
                 <h3 class="basliq1">8 занятий </h3>
                 <p class="p1">Для погружения
                     в кинематограф</p>
